--- a/wether/StyleSheet.css
+++ b/wether/StyleSheet.css
@@ -1,4 +1,3 @@
-
 html,body{
     width: 100%;
     margin: 0;
@@ -18,7 +17,7 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-40%);
 
 }
 .Search_Box{
@@ -43,4 +42,32 @@ body{
 #bu:hover{
     background-color: rgb(0, 217, 255);
     cursor: pointer;
+}
+#temp{
+    font-family: 'Times New Roman', Times, serif;
+    color: aliceblue;
+    font-size: 30px;
+    transform: translate(-70%,-270%);
+    
+    animation-name: UpSlider;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both;
+}
+#cityname{
+    font-family: 'Times New Roman', Times, serif;
+    color: aliceblue;
+    font-size: 35px;
+    transform: translate(-70%,-150%);
+}
+@keyframes UpSlider{
+    from{
+        transform: translateY(800px);
+    }
+    to{
+        transform: translate(-139px,-270%);
+    }
 }
