--- a/wether/StyleSheet.css
+++ b/wether/StyleSheet.css
@@ -91,3 +91,11 @@ body{
         transform: translate(-139px,-60px);
     }
 }
+video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
